    - transaction_history.html now functioning; accessible from account.html

ALPHA v0.0.2.3
    - Created Google form for appeals, accessible through account.html
    - Account registry now accessible through account.html

#------------MAJOR UPDATE------------# (major changes to cookies, shutdown, and accounts)

ALPHA v0.0.3.0
    - Fixed some bugs in log dump
    - Refined server shutdown process
    - Actions no longer accessed by 'action-' prefix
    - Added logs to .gitignore
    - Client-id cookies are forced into some kind of existence now
    - A validator cookie has been added; it's a 512-bit string of random numbers, so you can only cookie-hack an account
        if you know the id AND validator (still not best case, but it's fine for most people)
    - Cookies will expire 2 weeks after their creation
    - Added HTTP code 303
    - Changed attachments of account.html to redirects using 303
    - Added account.html info of completed and active hunts

ALPHA v0.0.3.1
    - Created errors.cfg for configuring error codes and appropriate text
    - server.py has a throwError() which sends a page with the error and can use renderopts
    - Created error CSS and added [[error]] to every page under [[navbar]]
    - Timestamps of transactions and last activity added, the former also to transaction_history.html
    - Render options now have top-of-request-handler-set defaults
    - Caught a number of errors

ALPHA v0.0.3.2
    - Fixed major errors in error catching, reworked the system (it's really jank, but it works now)

ALPHA v0.0.3.3
    - Added Last Active and Created to registry.html (the latter to account.py as well)
    - Separated page reqs (so a request for account.html would redirect to login instead of sending login)
    - Decreased redundancy, fixed bugs
    - Corbel font can be loaded across all platforms

ALPHA v0.0.3.4
    - Modified admin account generation at start of main.py
    - Added disabled "Hunts" link in navbar, hunts.html
    