@@ -8,3 +8,7 @@
 5: Cookie-Authentication failed
 6: Invalid account
 7: Passwords don't match
+8: That person already has an account
+9: That username is already in use
+10: You have not yet been authorized to join
+11: Invalid credentials
