@@ -11,7 +11,7 @@
     [[navbar]]
     [[error]]
     <div id="big-center-text" class="center-text-div">
-        <h2>Open Beta</h2>
+        <h2>Closed Beta</h2>
     </div>
 </body>
 </html>
